<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">Notes</string>
  <string name="notes_appear_here_message">Your notes will appear here</string>
  <string name="add_note">New Note</string>
  <string name="edit_note">Edit Note</string>
  <string name="archived_notes_cleared_message">Archived notes cleared</string>
  <string name="menu_archive_note">Archive Note</string>
  <string name="menu_restore_note">Restore Note</string>
  <string name="menu_delete_note">Delete Note</string>
  <string name="menu_show_active">Show Active</string>
  <string name="menu_show_archive">Show Archived</string>
  <string name="menu_clear_archived">Clear Archived</string>
  <string name="navigation_view_header_title">Notes</string>
  <string name="title_hint">Title</string>
  <string name="description_hint">Enter your note here.</string>
  <string name="empty_note_message">Notes cannot be empty</string>
  <string name="successfully_saved_note_message">Note saved</string>
  <string name="statistics_no_notes">You have no notes.</string>
  <string name="statistics_active_notes">Active notes: %d</string>
  <string name="statistics_archived_notes">Archived notes: %d</string>
  <string name="note_archived_message">Note archived</string>
  <string name="note_restored_message">Note restored</string>
  <string name="cannot_connect_to_camera_message">Cannot connect to camera</string>
  <string name="take_picture">Add picture</string>
  <string name="take_picture_error">Could not take picture</string>
  <string name="statistics_title">Statistics</string>
  <string name="no_statistics_available">No statistics</string>
  <string name="no_data">No data</string>
  <string name="loading">LOADING</string>
  <string name="no_notes_all">You have no notes!</string>
  <string name="refresh">Refresh</string>
  <string name="successfully_deleted_note_message">Note deleted</string>
  <string name="successfully_added_note_message">Note added</string>
  <string name="successfully_archived_note_message">Note archived</string>
  <string name="successfully_restored_note_message">Note restored</string>
  <string name="error_unknown_command">Unknown option</string>
</resources>
