<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <import type="android.view.View" />

        <variable
            name="view_model"
            type="com.example.android.testing.notes.addeditnote.AddEditNoteViewModel" />
    </data>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/Toolbar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.android.testing.notes.ScrollChildSwipeRefreshLayout
                android:id="@+id/refresh_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:enabled="@{view_model.dataLoading}"
                app:refreshing="@{view_model.dataLoading}">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:visibility="@{view_model.dataLoading ? View.GONE : View.VISIBLE}">

                        <EditText
                            android:id="@+id/add_note_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/title_hint"
                            android:maxLines="1"
                            android:text="@={view_model.title}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                        <EditText
                            android:id="@+id/add_note_description"
                            android:layout_width="match_parent"
                            android:layout_height="350dp"
                            android:gravity="top"
                            android:hint="@string/description_hint"
                            android:text="@={view_model.description}"/>

                    </LinearLayout>
                </ScrollView>
            </com.example.android.testing.notes.ScrollChildSwipeRefreshLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_save_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_done"
                app:fabSize="normal"
                app:layout_anchor="@id/refresh_layout"
                app:layout_anchorGravity="bottom|right|end" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</layout>