...
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:visibility="@{view_model.empty ? View.GONE : View.VISIBLE}">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/notes_list"
                                app:items="@{view_model.items}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingBottom="8dp"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
...

                        </LinearLayout>
                    </RelativeLayout>
                </com.example.android.testing.notes.ScrollChildSwipeRefreshLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_add_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_add"
                    app:layout_anchor="@id/refresh_layout"
                    app:layout_anchorGravity="bottom|right|end"
...
